Fix navigation bg blur on Safari

--- a/index.css
+++ b/index.css
@@ -278,9 +278,10 @@ select {
   margin-inline-end: .5em;
 }
 
-@supports (backdrop-filter: blur(1rem)) {
+@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
   .primary-navigation {
     background: hsl(var(--clr-light) / 0.05);
+    -webkit-backdrop-filter: blur(1.5rem);
     backdrop-filter: blur(1.5rem);
   }
 }
